# ozon-mcp-server

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  SECURITY.md  demo.cast  docker-compose.prod.yml  docker-compose.yml  ozon-mcp-server.tar  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/: Dockerfile
docker/postgres/: init.sql
docker/redis/: redis.conf
scripts/: cast_to_gif.py  demo.py  record_demo.py
src/ozon_mcp_server/: __init__.py  __main__.py  config.py  demo.py  server.py
src/ozon_mcp_server/api/: client.py
src/ozon_mcp_server/cache/: redis_cache.py
src/ozon_mcp_server/db/: audit_repo.py
src/ozon_mcp_server/middleware/: __init__.py  auth.py  rate_limit.py  security.py
src/ozon_mcp_server/models/: common.py  orders.py  products.py
src/ozon_mcp_server/tools/: order_tools.py  product_tools.py
tests/: conftest.py
tests/security/: test_security.py
tests/unit/: test_demo.py  test_server.py
tests/unit/test_api/: test_audit.py  test_cache.py  test_client.py
tests/unit/test_middleware/: test_auth.py  test_rate_limit.py  test_security.py
tests/unit/test_models/: test_common.py  test_config.py  test_products_extended.py  test_validation.py
tests/unit/test_tools/: test_order_tools.py  test_product_tools.py
